--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@prisma/client": "^6.12.0",
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
+    "nodemailer": "^7.0.5",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^24.0.15",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^6.12.0",
     "tsx": "^4.20.3"
   }
